Fix double-clicking in collection using left-handed mouse setting

docs on Qt::LeftButton

	The left button is pressed, or an event refers to the left button.
	(The left button may be the right button on left-handed mice.)

BUG: 272360